fixed contact spacing and edited comments

--- a/main.css
+++ b/main.css
@@ -404,7 +404,7 @@ canvas {
     text-align: center;
     transition: 0.6s;
     border-radius: 10px;
-    margin-bottom: 64px;
+    margin-bottom: 72px;
     padding-top: 10px;
 }
 
